# iroha-cpp

./: BatchExample.cpp  CMakeLists.txt  GrpcClient.cpp  GrpcClient.hpp  GrpcResponseHandler.cpp  GrpcResponseHandler.hpp  QueryResponseHandler.cpp  QueryResponseHandler.hpp  README.md  TransactionResponseHandler.cpp  TransactionResponseHandler.hpp  TxExample.cpp  main.cpp
model/: CMakeLists.txt  Query.cpp  Query.hpp  Tx.cpp  Tx.hpp  TxBatch.cpp  TxBatch.hpp
model/generators/: CommandGenerator.cpp  CommandGenerator.hpp  QueryGenerator.cpp  QueryGenerator.hpp
model/utils/: Utils.cpp  Utils.h
services/: CMakeLists.txt  ClassDeclarations.h  LibsAndClassDeclarations.h  Query.cpp  Query.hpp  Request.cpp  Request.hpp  Status.cpp  Status.hpp  Tx.cpp  Tx.hpp  TxBatch.cpp  TxBatch.hpp
